@@ -1,3 +1,10 @@
+Wed Nov 17 12:16:53 CET 2010
+	Allowing signalling of errors in generating chunked responses to
+	clients (by closing connectins) using the new
+	MHD_CONTENT_READER_END_WITH_ERROR ((size_t)-2) return value.  Also
+	introducing MHD_CONTENT_READER_END_OF_STREAM constant instead
+	of (size_t) -1 / SIZE_MAX.
+
 Sun Nov 14 20:45:45 CET 2010
 	Adding API call to generate HTTP footers in response. -CG
 
